// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен корректно отрендериться диапазон цен co списком скидок 1`] = `
<div
  className="PriceNewOffer"
>
  <div
    className="PriceNewOffer__price"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <OfferPriceCaption
      className=""
      currency="RUR"
      iconView="CLOSED"
      offer="[Offer mock]"
      withDiscount={true}
    />
  </div>
  <div
    className="PriceNewOffer__originalPrice"
  >
    2 260 700 ₽
     без скидок
  </div>
  <div
    className="PriceNewOffer__discountListContainer"
  >
    <div
      className="PriceNewOffer__discountListTitle"
    >
      Скидки
    </div>
    <div
      className="PriceNewOffer__discountList"
    >
      <div
        className="PriceNewOffer__discountItem"
        key="max_discount"
      >
        <div
          className="PriceNewOffer__discountName"
        >
          Максимальная
          <HoveredTooltip
            defaultPadding={true}
            directions={
              Array [
                "top-center",
              ]
            }
            isVisible={false}
            mainOffset={10}
            popupTheme="dark"
            secondaryOffset={-10}
            showTimeout={200}
            tooltipContent={
              <div
                className="PriceNewOffer__maxDiscountTooltip"
              >
                Максимальная скидка, которую может предоставить дилер. Подробности узнавайте по
                 
                телефону.
              </div>
            }
          >
            <div
              className="PriceNewOffer__questionSign"
            >
              <IconSvg
                className="PriceNewOffer__questionSignIcon"
                id="svgID"
                size="24"
              />
            </div>
          </HoveredTooltip>
        </div>
        <div
          className="PriceNewOffer__discountValue"
        >
          715 700 ₽
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`должен корректно отрендериться диапазон цен без списка скидок 1`] = `
<div
  className="PriceNewOffer"
>
  <div
    className="PriceNewOffer__price"
  >
    <OfferPriceCaption
      className=""
      currency="RUR"
      offer="[Offer mock]"
      withDiscount={true}
    />
  </div>
  <div
    className="PriceNewOffer__originalPrice"
  >
    2 260 700 ₽
     без скидок
  </div>
</div>
`;

exports[`должна корректно отрендериться одна цена 1`] = `
<div
  className="PriceNewOffer"
>
  <div
    className="PriceNewOffer__price"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <OfferPriceCaption
      className=""
      currency="RUR"
      iconView="CLOSED"
      offer="[Offer mock]"
      withDiscount={true}
    />
  </div>
  <div
    className="PriceNewOffer__noDiscount"
  >
    О скидках и акциях узнавайте по телефону
  </div>
</div>
`;

exports[`должна корректно отрендериться одна цена co списком скидок 1`] = `
<div
  className="PriceNewOffer"
>
  <div
    className="PriceNewOffer__price"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <OfferPriceCaption
      className=""
      currency="RUR"
      iconView="CLOSED"
      offer="[Offer mock]"
      withDiscount={true}
    />
  </div>
  <div
    className="PriceNewOffer__discountListContainer"
  >
    <div
      className="PriceNewOffer__discountListTitle"
    >
      Скидки
    </div>
    <div
      className="PriceNewOffer__discountList"
    >
      <div
        className="PriceNewOffer__discountItem"
        key="tradein"
      >
        <div
          className="PriceNewOffer__discountName"
        >
          В трейд-ин
        </div>
        <div
          className="PriceNewOffer__discountValue"
        >
          до 
          715 700 ₽
        </div>
      </div>
    </div>
  </div>
</div>
`;
